--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -1,27 +1,25 @@
 .fade-in {
-  margin: 0;
+  margin-top: 80px;
   padding: 0;
-  height: 100vh;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-image: src="\images\IMG_0205-EFFECTS_Original.JPG";
   background-size: cover;
 }
 
 .fade-in .container {
   width: 100%;
-  height: 100vh;
-  background: #062439;
-
+  height: center;
+  background: #ff510034;
   display: flex;
   justify-content: center;
   align-items: center;
 
   .box {
-    width: 800x;
-    height: 250px;
+    width: center;
+    height: 200px;
     position: relative;
     display: flex;
     justify-content: center;
