--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -12,7 +12,7 @@
 .fade-in .container {
   width: 100%;
   height: center;
-  background: #ff510034;
+  background: #0624392b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,6 +39,7 @@
         position: absolute;
         animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
         display: flex;
+        border-radius: 5px;
       }
 
       h1 {
