--- a/css/submit.css
+++ b/css/submit.css
@@ -155,19 +155,32 @@
 .submit-button .cont {
     position: absolute;
     width: 152px;
+    /*Done*/
+    height: 10px;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    margin: -25px
+        /*Done*/
+        0 0 -300px
 }
-
 
 .submit-button button {
     border-width: 1px;
     width: 150px;
+    /*Done*/
     height: 50px;
+    /*Done*/
+    /*border-radius*/
     border-radius: 25px;
-    background: #ff5100;
+    /*Done*/
+    background: #FB141D;
+    /*change to orange*/
     position: absolute;
+    /*border: 1px solid #FB141D*/
+}
+
+.submit-button button:hover {
+    background: #fb141c96;
 }
 
 .submit-button button>span {
