--- a/css/text-fadein.css
+++ b/css/text-fadein.css
@@ -12,7 +12,7 @@
 .fade-in .container {
   width: 100%;
   height: center;
-  background: #0624392b;
+  background: #FB141D34;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,11 +35,10 @@
       .block {
         width: 0%;
         height: inherit;
-        background: #ff5100;
+        background: #FB141D;
         position: absolute;
         animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
         display: flex;
-        border-radius: 5px;
       }
 
       h1 {
@@ -61,7 +60,7 @@
           -moz-border-radius: 50%;
           border-radius: 50%;
 
-          background: #ff5100;
+          background: #FB141D;
           -webkit-animation: load 0.6s cubic-bezier(.74, .06, .4, .92) forwards;
           animation: popIn 0.8s cubic-bezier(.74, .06, .4, .92) forwards;
           animation-delay: 2s;
@@ -86,7 +85,7 @@
       .block {
         width: 0%;
         height: inherit;
-        background: #ff5100;
+        background: #FB141D;
         position: absolute;
         animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
         animation-delay: 2s;
@@ -160,7 +159,7 @@
   0% {
     width: 0px;
     height: 0px;
-    background: #ff5100;
+    background: #FB141D;
     border: 0px solid #ffffff;
     opacity: 0;
   }
@@ -168,7 +167,7 @@
   50% {
     width: 20px;
     height: 20px;
-    background: #ff5100;
+    background: #FB141D;
     opacity: 1;
     bottom: 80px;
   }
@@ -189,7 +188,7 @@
   100% {
     width: 10px;
     height: 10px;
-    background: #ff5100;
+    background: #FB141D;
     border: 0px solid #000000;
     bottom: 20px;
 
